Support Debian’s x-terminal-emulator interface
Debian requires packages that want to provide x-terminal-emulator
(which is used by other packages that need a terminal emulator but don't want to force a specific one) to implement -T
:
Support the command-line option -T title, which creates a new terminal window with the window title title.
It'd be cool to have that implemented so we can add a Provides: x-terminal-emulator
to the kgx package.
Edited by Zander Brown