application: Handle a command with multiple parameters

gnome-terminal accepts multiple parameters after the "--" pseudo-option,
and uses them as a command and optional arguments. kgx previously
accepted positional parameters, but ignored them, which is confusing.
Instead, treat them the same way gnome-terminal does.

xterm accepts multiple parameters after the special "-e" option, which
also terminates command-line-option parsing, and Debian's
x-terminal-emulator interface borrows this interpretation of "-e" from
xterm. Convert "-e" into "--" so that it has the xterm-compatible
behaviour of terminating command-line parsing, which is otherwise not
available in GOptionContext.

Resolves: https://gitlab.gnome.org/GNOME/console/-/issues/26
Signed-off-by: Simon McVittie <smcv@debian.org>